--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <script src="Noise_function.js"></script>
-    <script src="main.js"></script>
+    <canvas id="myCanvas" width="500" height="500"></canvas>
+    <script defer src="p5.min.js"></script>
+    <script defer src="main.js"></script>
 </body>
 </html>
