--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <canvas id="myCanvas" width="500" height="500"></canvas>
-    <script defer src="p5.min.js"></script>
+    <canvas id="myCanvas" width="1080" height="500"></canvas>
+    <script defer src="p5.js"></script>
     <script defer src="main.js"></script>
 </body>
 </html>
